--- a/index.html
+++ b/index.html
@@ -8,17 +8,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <div class="score-section-container">
+        <div id="score-section">
+            <div id="points">
+                <p> <span id="score">10</span>Pts</p>
+            </div>
+            <div id="circle1"></div>
+        </div>
+    </div>
 
-        <div class="circles">
-            <div id="background-circle"></div>
+ <!--   <div id="background-circle"></div>
             <div id="circle1"></div>
             <div id="circle2"></div>
-            <div id="circle3"></div>
-        </div>
-        
- </nav>
-    <section id="points">
+            <div id="circle3"></div> -->
+
+
+
+<!--     <section id="points">
         <p> 10 Pts</p>
     </section>
     <section id="question">
@@ -37,7 +43,7 @@
 
     <footer>
         <div id="circle4"></div>
-    </footer>
+    </footer> -->
 
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
