--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
                 <p> <span id="score">10</span>Pts</p>
             </div>
             <div id="circle1"></div>
+            <div id="circle2"></div>
+            <div id="circle3"></div>
+            <div id="circle4"></div>
+            <div id="circle5"></div>
+            <div id="circle6"></div>
         </div>
     </div>
 
