changes to html and css footer

--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
     <div class="score-section-container">
         <div id="score-section">
             <div id="points">
-                <p> <span id="score">10</span>Pts</p>
+                <p> <span id="score"> 10</span> pts</p>
             </div>
             <div id="circle1"></div>
         </div>
     </div>
+
+
+<div id = "total-questions">
+    <p>Pregunta 0/10</p>
+</div>
+
+<div class="footer">
+    <button id="button-next" onclick="start()">Siguiente pregunta</button>
+</div>
+   
 
  <!--   <div id="background-circle"></div>
             <div id="circle1"></div>
@@ -33,9 +43,7 @@
     <section id="answer">
        
     </section>
-    <section id="skip">
-        <button id="button-next" onclick="start()">Siguiente pregunta</button>
-    </section>
+    
 
     <footer>
         <div id="circle4"></div>
