subiendo mas cambios

--- a/index.html
+++ b/index.html
@@ -13,13 +13,17 @@
             <div id="points">
                 <p> <span id="score"> 10</span> pts</p>
             </div>
+        
             <div id="circle1"></div>
             <div id="circle2"></div>
             <div id="circle3"></div>
             <div id="circle4"></div>
             <div id="circle5"></div>
             <div id="circle6"></div>
+            <div id="circle7"></div>
+            <div id="circle8"></div>
         </div>
+        
     </div>
 
 
@@ -27,10 +31,56 @@
     <p>Pregunta 0/10</p>
 </div>
 
+    <div id="question">
+        <p>This is a question</p>
+    </div>
+
+<div id="answers">
+
+    <button id="answer1">Respuesta 1</button>
+    <button>Respuesta 2</button>
+    <button>Respuesta 3</button>
+    <button>Respuesta 4</button>
+    <button>Respuesta 5</button>
+</div>
+
+
+
 <div class="footer">
     <button id="button-next" onclick="start()">Siguiente pregunta</button>
+    <div id="circle9"></div>
+    <div id="circle10"></div>
+    <div id="circle11"></div>
+    <div id="circle12"></div>
+    <div id="circle13"></div>
+    <div id="circle14"></div>
+    <div id="circle15"></div>
+    <div id="circle16"></div>
+    <div id="circle17"></div>
+    <div id="circle18"></div>
+    <div id="circle19"></div>
+    <div id="circle20"></div>
+    <div id="circle21"></div>
+    <div id="circle22"></div>
+    <div id="circle23"></div>
+    <div id="circle24"></div>
+    <div id="circle25"></div>
+    <div id="circle26"></div>
+    <div id="circle27"></div>
+    <div id="circle28"></div>
+    <div id="circle29"></div>
+    <div id="circle30"></div>
+    <div id="circle31"></div>
+    <div id="circle32"></div>
+    <div id="circle33"></div>
+    <div id="circle34"></div>
 </div>
-   
+
+
+
+
+
+
 
  <!--   <div id="background-circle"></div>
             <div id="circle1"></div>
