casi casi finiquitado

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <div class="footer">
 
-        <button id="button-next" onclick="showModalSkipQuestion()">Siguiente pregunta</button>
+        <button id="button-next" class="confetti-button"  onclick="showModalSkipQuestion()">Siguiente pregunta</button>
         <div id="circle9"></div>
         <div id="circle10"></div>
         <div id="circle11"></div>
@@ -138,6 +138,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
 </script>
+<script src="confetti.js"></script>
 <script src="script.js"></script>
-
 </html>
